--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  list_spanish_words: ^0.1.0
+  english_words: ^4.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
